[gd_scene load_steps=8 format=2]

[ext_resource path="res://Game/Scenes/Main/Cards/Location Card.tscn" type="PackedScene" id=1]
[ext_resource path="res://Game/Scripts/Main/Cards/Monster card.gd" type="Script" id=2]
[ext_resource path="res://Game/Assets/Images/Experimental/Black.png" type="Texture" id=3]
[ext_resource path="res://Game/Assets/Fonts/BAUHS93.TTF" type="DynamicFontData" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=2]
size = 14
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 14
font_data = ExtResource( 5 )

[node name="Card" instance=ExtResource( 1 )]
scale = Vector2( 0.75, 0.75 )
script = ExtResource( 2 )

[node name="Background" parent="BaseBackground" index="0"]
position = Vector2( -0.475849, 25.6416 )
scale = Vector2( 1.34461, 2.01624 )

[node name="sample" parent="ColorBackground" index="0"]
position = Vector2( -0.288544, 25.1718 )
scale = Vector2( 1.25846, 1.93194 )

[node name="Background" parent="PictureBackground" index="0"]
position = Vector2( 0.530992, -19.9234 )

[node name="secondSample" parent="Picture" index="0"]
position = Vector2( 1.30398, -20.181 )

[node name="Background" parent="DescriptionOrEffectBackground" index="0"]
position = Vector2( 0.0260719, 85.1422 )

[node name="TextBackdrop" parent="TextBackdrop" index="0"]
position = Vector2( -0.21817, 84.233 )

[node name="TextBackdrop" parent="TextBackdrop2" index="0"]
position = Vector2( -0.440632, -59.801 )
scale = Vector2( 1.24047, 0.237639 )

[node name="DescriptionOrEffect" parent="." index="8"]
margin_left = -51.9798
margin_top = 58.2266
margin_right = 53.0202
margin_bottom = 109.227

[node name="SoundPlayer" type="AudioStreamPlayer" parent="." index="9"]

[node name="animation" type="AnimatedSprite" parent="." index="10"]
frames = SubResource( 1 )

[node name="AttributeAndHealthBackground" type="Sprite" parent="." index="11"]
position = Vector2( -0.222469, 29.8114 )
scale = Vector2( 1.00445, 0.403772 )
texture = ExtResource( 3 )

[node name="attribute" type="Label" parent="." index="12"]
margin_left = -28.2904
margin_top = 12.1662
margin_right = 24.7096
margin_bottom = 26.1662
custom_fonts/font = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="health" type="Label" parent="." index="13"]
margin_left = -27.5551
margin_top = 33.5777
margin_right = 26.4449
margin_bottom = 47.5777
custom_fonts/font = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionBox" parent="." index="14"]
position = Vector2( -0.709793, 26.1167 )
